--- a/gold/gold.ipynb
+++ b/gold/gold.ipynb
@@ -37,7 +37,7 @@
       "source": [
         "### Цели и задачи исследования\n",
         "\n",
-        "Цель исследования — подготовить прототип моделей машинного обучения, которые будут предсказывать коэффициент восстановления золота из золотодобывающей руды. Модели будут прогнозировать две величины: эффективность обогащения чернового концентрата (rougher.output.recovery) и эффективность обогащения финального концентрата (final.output.recovery).\n",
+        "Цель исследования — подготовить прототип моделей машинного обучения, которые будут предсказывать коэффициент восстановления золота из золотодобывающей руды. Модели будут прогнозировать две величины: эффективность обогащения чернового концентрата (`rougher.output.recovery`) и эффективность обогащения финального концентрата (`final.output.recovery`).\n",
         "\n",
         "Задачи и этапы исследования:\n",
         "\n",
@@ -46,7 +46,7 @@
         "- проанализировать признаки, недоступные в тестовом наборе данных (некоторые параметры недоступны на тестовой выборке, поскольку они замерялись и рассчитывались позже);\n",
         "- провести предобработку данных.\n",
         "2. Проанализировать данные:\n",
-        "- посмотреть, как меняется концентрация металлов Au, Ag и Pb на разных этапах очистки;\n",
+        "- посмотреть, как меняется концентрация металлов `Au`, `Ag` и `Pb` на разных этапах очистки;\n",
         "- сравнить распределения размеров гранул сырья на обучающем и тестовом наборах данных (для того, чтобы оценка модели была правильной, эти распределения не должны сильно отличаться);\n",
         "- исследовать суммарную концентрацию всех веществ на разных стадиях: в сырье, в черновом и финальном концентратах.\n",
         "3. Обучить и проверить модели:\n",
@@ -63,17 +63,23 @@
       "source": [
         "### Характеристика данных, формулы расчета\n",
         "\n",
-        "В нашем распоряжении три набора данных (full, train и test). Данные индексируются по времени получения информации (столбец date).\n",
+        "В нашем распоряжении три набора данных (full, train и test). Данные индексируются по времени получения информации (столбец `date`).\n",
         "\n",
         "Вкратце опишем технологический процесс получения золота из руды. Процесс проходит несколько стадий: дробленая смесь (руда после первичной обработки) отправляется на флотацию (обогащение), после чего следует двухэтапная очистка. После флотации на выходе получается черновой концентрат и отвальные хвосты, после двух стадий очистки у нас есть финальный концентрат и новые отвальные хвосты.\n",
         "\n",
         "Названия признаков в наборах данных имеют следующую структуру: \"этап.тип\\_параметра.название_параметра\".\n",
         "\n",
-        "Значения блока этап: rougher (флотация), primary_cleaner (первичная очистка), secondary_cleaner (вторичная очистка), final (финальные характеристики).\n",
+        "Значения блока этап: `rougher` (флотация), `primary_cleaner` (первичная очистка), `secondary_cleaner` (вторичная очистка), `final` (финальные характеристики).\n",
         "\n",
-        "Значения блока тип_параметра: input (параметры сырья), output (параметры продукта), state (текущее состояние этапа), calculation (расчетные характеристики).\n",
+        "Значения блока тип_параметра: `input` (параметры сырья), `output` (параметры продукта), `state` (текущее состояние этапа), `calculation` (расчетные характеристики).\n",
         "\n",
-        "Эффективность обогащения руды (recovery) рассчитывается по формуле: (C\\*(F-T)/F\\*(C-T))*100 (C — доля золота в концентрате после флотации или очистки; F — доля золота в сырье или концентрате после флотации или очистки; T — доля золота в отвальных хвостах после флотации или очистки)."
+        "Эффективность обогащения руды (`recovery`) рассчитывается по формуле: \n",
+        "\n",
+        "$100\\cdot\\frac{C\\cdot(F-T)}{F\\cdot(C-T)}$\n",
+        "\n",
+        "где `C` — доля золота в концентрате после флотации или очистки; \n",
+        "`F` — доля золота в сырье или концентрате после флотации или очистки; \n",
+        "`T` — доля золота в отвальных хвостах после флотации или очистки."
       ]
     },
     {
